--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 dj-database-url==0.5.0
 Django==4.2.11
 django-phonenumber-field==7.3.0
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 phonenumbers==8.13.31
 psycopg2==2.9.9
