--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ Django==4.2.11
 django-allauth==0.57.2
 django-crispy-forms==2.1
 django-phonenumber-field==7.3.0
+django-resized==1.0.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
 phonenumbers==8.13.31
+pillow==10.2.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
